--- a/action.yml
+++ b/action.yml
@@ -135,15 +135,15 @@ runs:
             [[ "${down_file:0-4}" == ".zip" ]] && unzip -o ${down_file} 2>/dev/null && sync
             echo -e "Armbian file: \n$(ls -l *.img 2>/dev/null)"
 
-            echo -e "Check the armbian file name (-trunk_)..."
+            echo -e "Check the armbian file name (_odroid-)..."
             image_file="$(ls *.img 2>/dev/null | head -n 1)"
-            if [[ "${image_file}" =~ "-trunk_" ]]; then
+            if [[ "${image_file}" =~ "_odroid-" ]]; then
                 echo -e "The armbian file name is correct."
             else
                 echo -e "Modify Armbian filename..."
                 image_version="$(echo ${image_file} | grep -oE '[2-9][0-9]\.[0-9]{1,2}\.[0-9]{1,2}' | head -n 1)"
                 image_kernel="$(echo ${image_file} | grep -oE '[5-9]\.[0-9]{1,2}\.[0-9]{1,3}' | head -n 1)"
-                image_save_name="Armbian_${image_version}-trunk_${image_kernel}.img"
+                image_save_name="Armbian_${image_version}_odroid-${image_kernel}.img"
                 rm -f ${image_save_name}
                 mv -f ${image_file} ${image_save_name}
                 echo -e "Renamed Armbian file: [ ${image_save_name} ]"
